fix flexible wrapper guten inner wrap width

--- a/src/blocks/wrapper/styles/style.scss
+++ b/src/blocks/wrapper/styles/style.scss
@@ -19,7 +19,6 @@
     align-items: flex-start;
     display: flex !important;
     flex-wrap: wrap;
-    flex-grow: 1;
     .section-wrapper {
         width: 100%;
     }
